# py-spv

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
alembic/: alembic.ini  env.py  script.py.mako
docker/: Dockerfile  docker-compose.yml
docs/: openapi.yaml
src/spv_wallet/: __init__.py  main.py
src/spv_wallet/api/: __init__.py  app.py  dependencies.py
src/spv_wallet/api/middleware/: __init__.py  auth.py  cors.py  metrics.py
src/spv_wallet/api/paymail_server/: __init__.py  provider.py  provider_v2.py  routes.py
src/spv_wallet/api/v1/: __init__.py  access_keys.py  admin.py  contacts.py  merkleroots.py  paymails.py  schemas.py  shared_config.py  transactions.py  users.py  utxos.py
src/spv_wallet/api/v2/: __init__.py  callbacks.py  contacts.py  data.py  operations.py  schemas.py  transactions.py  users.py
src/spv_wallet/api/v2/admin/: __init__.py  paymails.py  users.py  webhooks.py
src/spv_wallet/bsv/: __init__.py  address.py  keys.py  merkle.py  script.py  transaction.py
src/spv_wallet/cache/: __init__.py  client.py  memory.py  redis.py
src/spv_wallet/chain/: __init__.py  service.py
src/spv_wallet/chain/arc/: __init__.py  models.py  service.py
src/spv_wallet/chain/bhs/: __init__.py  models.py  service.py
src/spv_wallet/chain/woc/: __init__.py  client.py
src/spv_wallet/cluster/: __init__.py  client.py  pubsub.py
src/spv_wallet/config/: __init__.py  defaults.py  settings.py
src/spv_wallet/datastore/: __init__.py  client.py  engines.py  migrations.py
src/spv_wallet/desktop/: __init__.py  account_wizard.py  app.py  main_window.py  theme.py  wallet_api.py  wallet_wizard.py
src/spv_wallet/desktop/dialogs/: __init__.py  network.py  password.py  preferences.py  qrcode.py  transaction.py
src/spv_wallet/desktop/resources/: __init__.py
src/spv_wallet/desktop/resources/icons/: .gitkeep
src/spv_wallet/desktop/resources/styles/: .gitkeep
src/spv_wallet/desktop/views/: __init__.py  console.py  contacts.py  history.py  keys.py  overview.py  receive.py  send.py  settings.py  utxo.py
src/spv_wallet/desktop/widgets/: __init__.py  amount_edit.py  common.py  qr_widget.py  status_bar.py
src/spv_wallet/engine/: __init__.py  client.py  options.py
src/spv_wallet/engine/models/: __init__.py  access_key.py  base.py  contact.py  destination.py  draft_transaction.py  paymail_address.py  transaction.py  utxo.py  webhook.py  xpub.py
src/spv_wallet/engine/services/: __init__.py  access_key_service.py  admin_service.py  contact_service.py  destination_service.py  notification_service.py  paymail_service.py  transaction_service.py  utxo_service.py  xpub_service.py
src/spv_wallet/engine/v2/: __init__.py  engine.py
src/spv_wallet/engine/v2/contacts/: __init__.py  service.py
src/spv_wallet/engine/v2/database/: __init__.py  models.py
src/spv_wallet/engine/v2/database/repository/: __init__.py  addresses.py  operations.py  outputs.py  paymails.py  transactions.py  users.py
src/spv_wallet/engine/v2/paymails/: __init__.py  service.py
src/spv_wallet/engine/v2/transaction/: __init__.py
src/spv_wallet/engine/v2/transaction/outlines/: __init__.py  models.py  service.py
src/spv_wallet/engine/v2/transaction/record/: __init__.py  service.py  tx_flow.py
src/spv_wallet/engine/v2/transaction/txsync/: __init__.py  service.py
src/spv_wallet/engine/v2/users/: __init__.py  service.py
src/spv_wallet/errors/: __init__.py  chain_errors.py  definitions.py  spv_errors.py
src/spv_wallet/metrics/: __init__.py  collector.py  middleware.py
src/spv_wallet/notifications/: __init__.py  events.py  service.py  webhook.py
src/spv_wallet/paymail/: __init__.py  client.py  models.py  pike.py  server.py
src/spv_wallet/taskmanager/: __init__.py  manager.py  tasks.py
src/spv_wallet/tools/: __init__.py  testnet_tool.py
src/spv_wallet/utils/: crypto.py  helpers.py
tests/: conftest.py  test_main.py
tests/integration/: __init__.py  conftest.py  test_wallet_lifecycle.py
tests/test_api/: test_app.py  test_auth.py  test_cors.py  test_dependencies.py  test_metrics_endpoint.py  test_schemas.py  test_v1_endpoints.py  test_v2_endpoints.py
tests/test_bsv/: __init__.py  test_address.py  test_crypto.py  test_edge_cases.py  test_keys.py  test_merkle.py  test_script.py  test_transaction.py
tests/test_cache/: test_cache_client.py  test_memory_cache.py
tests/test_chain/: __init__.py  test_arc.py  test_arc_models.py  test_arc_service.py  test_bhs.py  test_bhs_models.py  test_bhs_service.py  test_chain_service.py  test_woc_client.py
tests/test_cluster/: __init__.py
tests/test_config/: test_phase7_config.py  test_settings.py
tests/test_datastore/: test_datastore.py  test_engines.py  test_migrations.py
tests/test_desktop/: __init__.py  conftest.py  test_app.py
tests/test_engine/: __init__.py  test_access_key_service.py  test_client.py  test_destination_service.py  test_engine_client.py  test_model_ops.py  test_models.py  test_transaction_service.py  test_utxo_service.py  test_xpub_service.py
tests/test_engine/test_v2/: test_engine.py  test_models.py  test_services.py
tests/test_errors/: test_errors.py
tests/test_metrics/: __init__.py  test_middleware.py
tests/test_notifications/: __init__.py  test_webhook.py
tests/test_paymail/: __init__.py  test_client.py  test_contact_service.py  test_models.py  test_paymail_service.py  test_pike.py  test_provider.py  test_server.py
tests/test_taskmanager/: __init__.py
